--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Detector</title>
-    <!-- Tailwind CSS via CDN script (works with updated CSP) -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Local CSS to avoid MV3 CSP issues -->
+    <link rel="stylesheet" href="popup.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
