--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -24,6 +24,6 @@
   <p>Permissions requested (activeTab, scripting, storage, webNavigation, tabs, host access to facebook.com) are strictly required for the extension’s single purpose: detecting phishing links on Facebook.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions, you may contact us at: <em>[your email here]</em></p>
+  <p>If you have questions, you may contact us at: <em>Rioncal@gmail.com, vdlei49@gmail.com, jonaselcid30@gmail.com, kylegulapa06@gmail.com</em></p>
 </body>
 </html>
